# SEA_Demo_Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
config/: sea_config.yml
protos/: sea.proto
src/: ethercat.hpp  main.cpp  sea_control.cpp  sea_control.hpp
test/: unit_test.cpp
